breakpoints to avoid intro text-wrap

--- a/styles/layout/layout.module.scss
+++ b/styles/layout/layout.module.scss
@@ -91,42 +91,41 @@ $n-cursor: "data:image/svg+xml,%3Csvg width='25px' height='25px' viewBox='0 0 64
 .intro_wrapper {
   margin-bottom: 2.5rem;
   background: rgba(0, 0, 0, 0.7);
-  padding: 1rem;
+  padding: 0.5rem;
   border-radius: 15px;
   backdrop-filter: blur(3px);
 
-  h1 {
-    font-size: clamp(3.3rem, 15vw, variables.$fs-900);
+  @include mediaQueries.tablet {
+    padding: 1rem;
   }
 
   li {
-    font-size: cclamp(1rem, 2vw, variables.$fs-400);
+    font-size: clamp(12px, variables.$fs-300, 3vw);
+    @include mediaQueries.tablet {
+      font-size: clamp(18px, 1.7vw, variables.$fs-500);
+    }
+    font-weight: 700;
+  }
+
+  @include mediaQueries.desktop {
+    h1 {
+      min-width: 110%;
+    }
+    background: none;
+    padding: 0px;
+    backdrop-filter: none;
   }
 }
 
 .info_wrapper {
-  .intro_wrapper {
-    margin-bottom: 2.5rem;
-    background: rgba(0, 0, 0, 0.7);
-    padding: 1rem 2.5rem;
-    border-radius: 15px;
-    backdrop-filter: blur(3px);
-  }
-
   .about_text {
     margin-bottom: 2rem;
-  }
-
-  @include mediaQueries.desktop {
-    background: none;
-    padding: none;
-    backdrop-filter: none;
   }
 
   .title_list {
     display: flex;
     font-family: variables.$ff-secondary;
-    font-size: clamp(0.85rem, 2.8vw, variables.$fs-400);
+    // font-size: clamp(0.5rem, 2vw, variables.$fs-400);
     // line-height: 1.4em;
     margin: 0;
 
